# Qaymark

./: .env.example  .gitignore  .sbgignore  Makefile  README.md  docker-compose.yml  pyproject.toml  sbg_manifest.json
.githooks/: pre-commit
.github/workflows/: ci.yml
frameworks/: chaos-be-gone.json  design-be-gone.json  drift-be-gone.json
jobs/: README.md
jobs/fizzbuzz/: TASK.md  job.json
jobs/fizzbuzz/seed/: test_fizzbuzz.py
jobs/harness-control-room/: TASK.md  job.json  run.sh
jobs/harness-control-room/starter/: app.js  (+3 more)
jobs/temperature/: TASK.md  job.json
jobs/tetris/: TASK.md  job.json  run.sh
jobs/tetris-web/: TASK.md  job.json  run.sh
qaymark/: __init__.py  chat.py  checkin.py  cli.py  config.py  control.py  factory.py  fleet.py  frameworks.py  health.py  hygiene.py  idud_bridge.py  jsonio.py  keeper.py  loop.py  ollama_client.py  operations.py  orchestrator.py  plan.py  prompt.py  reference_bridge.py  references.py  report.py  serve.py  workspace.py
scripts/: bootstrap.sh  chat.sh  code_harness.py  dashboard.py  hygiene_gate.py  keeper.py  loops.py  morning_audit.py  play.py
tests/: __init__.py  test_chat.py  test_cli.py  test_control.py  test_dashboard.py  test_factory.py  test_feedback.py  test_fleet.py  test_frameworks.py  test_global_chat.py  test_health.py  test_hygiene.py  test_invariants.py  test_jsonio.py  test_keeper.py  test_loop.py  test_manifest.py  test_operations.py  test_orchestrator.py  test_plan.py  test_prompt.py  test_reference_bridge.py  test_rules.py  test_serve.py  test_streaming.py  test_uat.py  test_workspace.py
(+13 files in other folders)
